<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.CurrentNews.CurrentNewsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/current_news_constraint"
        android:layout_width="match_parent"
        android:layout_height="532dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/current_news_image"
            android:layout_width="match_parent"
            android:layout_height="532dp"
            android:scaleType="fitXY"
            android:src="@drawable/current_news_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/news_image_text" />
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="34dp"
            android:src="@drawable/back_btn_white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/back_button_text" />
        <ImageView
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="34dp"
            android:src="@drawable/save_btn_white1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/save_btn_text" />
        <TextView
            android:id="@+id/current_news_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_date_text"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:layout_marginStart="34dp"
            android:layout_marginTop="220dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/current_news_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimension_large"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="9dp"
            android:lineSpacingExtra="@dimen/dimension_small"
            android:text="@string/news_title_text"
            android:textSize="27sp"
            android:textColor="@color/white"
            android:fontFamily="@font/queens_b"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_news_date"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="39dp"
        android:layout_marginBottom="@dimen/dimension_xx_large"
        android:padding="@dimen/dimension_small"
        app:layout_constraintTop_toBottomOf="@+id/current_news_constraint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageView
                android:id="@+id/author_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/author_image"
                android:layout_weight="1"
                android:contentDescription="@string/author_image_text" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/author_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/author_name_text"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/black"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:layout_marginTop="33dp"
                    android:layout_marginStart="@dimen/dimension_small"
                    tools:ignore="InefficientWeight,NestedWeights" />
                <TextView
                    android:id="@+id/author_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_role_text"
                    android:textSize="@dimen/text_size_medium"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:layout_marginStart="@dimen/dimension_small"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_current_news_btn"
                android:layout_width="105dp"
                android:layout_height="30dp"
                android:text="@string/save_btn_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:textAllCaps="false"
                android:background="@drawable/rounded_button"
                android:layout_weight="1"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="34dp"/>

        </LinearLayout>
            <TextView
                android:id="@+id/news_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_full_description_text"
                android:padding="@dimen/dimension_large"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:maxLines="18"
                android:lineSpacingExtra="@dimen/dimension_small"
                android:fontFamily="@font/queens__"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>