<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="17dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/news_image_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dimension_x_large"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/news_image"
            android:layout_width="344dp"
            android:layout_height="208dp"
            android:scaleType="fitXY"
            android:src="@drawable/current_news_image"
            android:contentDescription="@string/news_image" />
        <androidx.cardview.widget.CardView
            android:id="@+id/saved_Top_Btn"
            android:layout_width="@dimen/dimension_xx_large"
            android:layout_height="@dimen/dimension_xx_large"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dimension_medium"
            android:layout_marginEnd="@dimen/dimension_medium"
            app:cardCornerRadius="@dimen/dimension_x_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/saved_items_btn"
                android:layout_width="@dimen/dimension_x_large"
                android:layout_height="@dimen/dimension_x_large"
                android:layout_gravity="center"
                android:src="@drawable/saved_filled"
                android:contentDescription="@string/saved_items_btn" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/news_title"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="18dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/news_title_text"
        android:textAlignment="textStart"
        android:textSize="27sp"
        android:textColor="#181818"
        android:fontFamily="@font/queens_b"
        android:lineSpacingExtra="@dimen/dimension_small"
        app:layout_constraintTop_toBottomOf="@id/news_image_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/news_description"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="9dp"
        android:maxLines="3"
        android:ellipsize="end"
        android:text="@string/news_description_text"
        android:textAlignment="textStart"
        android:textSize="22sp"
        android:textColor="#181818"
        android:lineSpacingExtra="@dimen/dimension_small"
        android:fontFamily="@font/queens__"
        app:layout_constraintTop_toBottomOf="@+id/news_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/news_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="34dp"
        android:gravity="start"
        android:text="@string/news_date_text"
        android:textSize="18sp"
        android:textColor="#C1C0BF"
        android:fontFamily="@font/sourcesanspro_regular"
        app:layout_constraintTop_toBottomOf="@+id/news_description"
        app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
        android:id="@+id/button_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimension_x_large"
        app:layout_constraintTop_toBottomOf="@+id/news_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/read_btn"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#94C77D"
            android:layout_marginEnd="@dimen/dimension_xx_large"
            android:text="@string/read_btn_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textAllCaps="false"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_btn"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_button"
            android:text="@string/save_btn_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textAllCaps="false"/>
    </LinearLayout>
    <View
        android:id="@+id/breakBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimension_x_small"
        android:background="#E8E8F7"
        android:layout_marginTop="17dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_linear_layout"/>
</androidx.constraintlayout.widget.ConstraintLayout>