<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F8F8FB"
    tools:context=".view.SavedNews.SavedNewsFragment">
    <LinearLayout
        android:id="@+id/saved_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_weight="1"
            android:src="@drawable/back_btn"
            android:contentDescription="@string/back_button_text" />
        <TextView
            android:id="@+id/saved_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="45dp"
            android:textAlignment="center"
            android:layout_weight="6"
            android:fontFamily="@font/sourcesanspro_semibold"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_xx_large"
            android:textColor="#94C77D"
            android:text="@string/saved_title_text"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/search_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        app:cardElevation="@dimen/dimension_medium"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="15dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        app:layout_constraintTop_toBottomOf="@+id/saved_linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <SearchView
                android:id="@+id/search_view"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:inputType="text"
                android:layout_marginEnd="@dimen/dimension_x_large"
                android:queryHint="@string/search_text"
                android:queryBackground="@color/white"
                android:tooltipText="@string/search_text"
                tools:ignore="InefficientWeight"
                tools:targetApi="o" />
            <ImageView
                android:layout_width="17dp"
                android:layout_height="@dimen/dimension_large"
                android:layout_gravity="center"
                android:layout_marginEnd="44dp"
                android:src="@drawable/filter2"
                android:contentDescription="@string/filter_text" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>