<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8FB"
    tools:context=".view.Home.HomeActivity">
    <ImageView
        android:src="@drawable/title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginStart="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/title_app" />
    <androidx.cardview.widget.CardView
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="34dp"
        android:backgroundTint="#94C77D"
        app:cardCornerRadius="@dimen/dimension_x_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/saved_items_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/save_btn"
            android:contentDescription="@string/saved_items_btn" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/search_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="122dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="15dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <SearchView
                android:id="@+id/search_view"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:inputType="text"
                android:layout_marginEnd="@dimen/dimension_x_large"
                android:queryHint="@string/search_text"
                android:queryBackground="@color/white"
                android:tooltipText="@string/search_text"
                tools:ignore="InefficientWeight"
                tools:targetApi="o" />
            <ImageView
                android:layout_width="17dp"
                android:layout_height="@dimen/dimension_large"
                android:layout_gravity="center"
                android:layout_marginEnd="44dp"
                android:src="@drawable/filter2"
                android:contentDescription="@string/filter_text" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/breakBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimension_x_small"
        android:background="#E8E8F7"
        android:layout_marginTop="21dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_card"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_recycler_view"
        android:layout_width="338dp"
        android:layout_height="200dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/breakBar" />


</androidx.constraintlayout.widget.ConstraintLayout>